--- a/FE/public/index.html
+++ b/FE/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>IHX-OPS | Dashboard</title>
-  
+
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome -->
@@ -29,7 +30,7 @@
 
 <body class="hold-transition sidebar-mini layout-fixed" id='main-body'>
     <div id="root">
-      
+
     </div>
     <!-- jQuery -->
     <script src="./plugins/jquery/jquery.min.js"></script>
@@ -37,7 +38,7 @@
     <script src="./plugins/jquery-ui/jquery-ui.min.js"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
-      $.widget.bridge('uibutton', $.ui.button)
+        $.widget.bridge('uibutton', $.ui.button)
     </script>
     <!-- Bootstrap 4 -->
     <script src="./plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -62,7 +63,7 @@
     <!-- AdminLTE App -->
     <script src="./dist/js/adminlte.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="./dist/js/demo.js"></script>
+    <!-- <script src="./dist/js/demo.js"></script> -->
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
     <script src="./dist/js/pages/dashboard.js"></script>
 </body>
